--- a/docs/180328/dabercro_hbb_180328.tex
+++ b/docs/180328/dabercro_hbb_180328.tex
@@ -556,7 +556,7 @@
 
 \begin{frame}
   \frametitle{Soft Drop Mass Plots}
-  Constraining based on the $m_SD$. More W+jets than resolved analysis
+  Constraining based on the $m_{SD}$. More W+jets than resolved analysis
 
   \fourfigs{signal}
            {180327_v4/boosted_signal_fatjet1_mSD_corr}
