--- a/docs/180328/dabercro_hbb_180328.tex
+++ b/docs/180328/dabercro_hbb_180328.tex
@@ -470,17 +470,17 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{CR plots (Pre-Fit)}
+  \frametitle{Control Regions (Pre-Fit)}
   Control with cMVA of the lower cMVA jet, and plot BDT for signal
 
   \fourfigs{Signal region}
-           {180327_v1/inclusive_signal_event_class_reg_3.pdf}
+           {bm/sr_BDT.pdf}
            {Z+HF CR}
-           {180327_inc/inclusive_heavyz_cmva_jet2_cmva.pdf}
+           {bm/cr_zhf_higgs2cmva.pdf}
            {Z+LF CR}
-           {180327_inc/inclusive_lightz_cmva_jet2_cmva.pdf}
+           {bm/cr_zlf_higgs2cmva.pdf}
            {tt CR}
-           {180327_inc/inclusive_tt_cmva_jet2_cmva.pdf}
+           {bm/cr_ttbar_higgs2cmva.pdf}
 \end{frame}
 
 \begin{frame}
@@ -502,13 +502,13 @@
 \begin{frame}
   \frametitle{CR plots (Post-Fit)}
   \fourfigs{Signal region}
-           {180327_yesterday_post/inclusive_signal_event_class_reg_3.pdf}
+           {bm/sr_BDT_postfit.pdf}
            {Z+HF CR}
-           {180327_post/inclusive_heavyz_cmva_jet2_cmva.pdf}
+           {bm/cr_zhf_higgs2cmva_postfit.pdf}
            {Z+LF CR}
-           {180327_post/inclusive_lightz_cmva_jet2_cmva.pdf}
+           {bm/cr_zlf_higgs2cmva_postfit.pdf}
            {tt CR}
-           {180327_post/inclusive_tt_cmva_jet2_cmva.pdf}
+           {bm/cr_ttbar_higgs2cmva_postfit.pdf}
 
   Post fit plots agree reasonably between data and MC
 \end{frame}
@@ -519,7 +519,7 @@
   \item We currently have an expected limit of {\bf 1.34}
   \item W+jets is relatively unconstrained since this is not combined with WH yet
   \item When we run official ZH datacards without WH combination,
-    we see slightly better limit of {\bf 1.31}
+    we see better limit of {\bf 1.30}
   \end{itemize}
   
 \end{frame}
@@ -542,7 +542,7 @@
   \begin{itemize}
   \item Fat jet $p_T > \SI{250}{GeV}$
   \item Fat jet $m_{SD} > \SI{40}{GeV}$
-  \item Use double-B cuts instead of leading jet cMVA cuts to separate HF and LF regions
+  \item Use double-b cuts instead of leading jet cMVA cuts to separate HF and LF regions
     \begin{itemize}
     \item HF, tt, and signal: double-B $> 0.8$
     \item LF: double-B$< 0.8$
@@ -561,7 +561,7 @@
   \fourfigs{signal}
            {180327_v4/boosted_signal_fatjet1_mSD_corr}
            {Z+HF}
-           {180327_v4/boosted_heavyz_fatjet1_mSD_corr}
+           {180328_v1/boosted_heavyz_fatjet1_mSD_corr}
            {Z+LF}
            {180327_v4/boosted_lightz_fatjet1_mSD_corr}
            {tt}
