Finished a rough draft of slides.

--- a/docs/presentation.tex
+++ b/docs/presentation.tex
@@ -1,7 +1,10 @@
 \documentclass{beamer}
 
 \author[D. Abercrombie]{
-  Daniel Abercrombie
+  \emph{Daniel Abercrombie}, Brandon Allen, Zeynep Demiragli,
+  Guillelmo Gomez-Ceballos, Dylan George Hsu, \\
+  Philip Harris, Yutaro Iiyama, Benedikt Maier, \\
+  Siddharth Narayanan, Christoph Paus
 }
 
 \title{\bf \sffamily Title Here}
